added a paragraph about how this is broadly exciting for cogsci.

--- a/symposium/cogsci_conventionsSymposium.tex
+++ b/symposium/cogsci_conventionsSymposium.tex
@@ -72,11 +72,17 @@ University of California, Berkeley}
 
 \section{Overview}
 
-Much of our everyday behavior is governed by conventions. The shape of the line we form at the caf\'e, the language we use to order our coffee, and the the money we use to pay for it are all somewhat arbitrary but self-sustaining solutions to recurring coordination problems. This definition, first formalized by David Lewis \citeyear{Lewis69_Convention}, has provided a potent means of characterizing conventions. For cognitive scientists, however, the outstanding question is how these solutions emerge and adapt in populations of learning, reasoning agents. The aim of this symposium is to gather and integrate several distinct empirical and theoretical perspectives on this question, bridging different domains of application.
+Much of our everyday behavior is governed by conventions. The shape of the line we form at the caf\'e, the language we use to order our coffee, and the the money we use to pay for it are all partly arbitrary but self-sustaining solutions to recurring coordination problems. This definition, first formalized by David Lewis \citeyear{Lewis69_Convention}, has provided a potent means of characterizing conventions. For cognitive scientists, however, the outstanding question is how these solutions emerge and adapt in populations of learning, reasoning agents. The aim of this symposium is to gather and integrate several distinct empirical and theoretical perspectives on this question, bridging different domains of application.
 
 There are two primary experimental paradigms used to study the emergence of conventions, each particularly useful for answering certain theoretical questions. The first is an iterated learning or diffusion chain design, where each successive participant produces the data used to train the next participant. Iterated learning experiments have been used, for example, to probe the bottlenecks and inductive biases driving the emergence of efficient, compressible structures in language \cite{KirbyCornishSmith08_PNAS, GriffithsKalish07_LanguageEvolution}. The second is a closed group design, drawing from tasks in collective behavior and behavioral game theory, where a single group of two or more participants repeatedly play a coordination game with one another. Because participants directly interact over time, closed group tasks have been useful for capturing the establishment of shared expectations and the behavioral dynamics of self-organization \cite{GoldstoneGureckis09_Collective_Behavior_Review, CentolaBaronchelli15_ConventionEmergence}.
 
-Recently, these two paradigms have begun to merge, especially within the domain of language evolution, spurring novel models of the pressures and constraints contributed by each mechanism and how they interact to shape stable conventions. However, many insights from collective behavior and social cognition have not yet been integrated. Moving forward, theoretical questions include sources of variability in convention-formation, the role of active social reasoning vs. emergent inductive biases, and the multiple scales on which conventions are formed; empirical issues include scaling up experiments to encompass larger populations and developing hybrid paradigms to test domain-generality of formation processes. This symposium will close with a panel discussion on some of these issues, led by Noah Goodman.
+Recently, these two paradigms have begun to merge, especially within the domain of language evolution, spurring novel models of the pressures and constraints contributed by each mechanism and how they interact to shape stable conventions. However, many insights from collective behavior and social cognition have not yet been integrated. Moving forward, theoretical questions include sources of variability in convention-formation, the role of active social reasoning vs. emergent inductive biases, and the multiple scales on which conventions are formed; empirical issues include scaling up experiments to encompass larger populations and developing hybrid paradigms to test domain-generality of formation processes. 
+
+This set of issues cuts across the interests of many different areas of cognitive science: from linguists concerned with the origins of language, to developmental psychologists interested in how children co-create their culture, to computer scientists attempting to build self-sustaining robot collectives. 
+Because of this breadth and because recent developments have opened up exciting new sources of data and theory, we are confident this symposium will be of broad interest at Cognitive Science.
+
+The symposium will consist of four talks, described below, by the leaders of the field.
+We will close with a panel discussion on some of these issues, led by Noah Goodman.
 
 %\section{Aims and Relevance}
 %The study of social conventions cuts across many disciplines and perspectives within the cognitive science community, yet 
