Update refs, formatting

--- a/symposium/cogsci_conventionsSymposium.tex
+++ b/symposium/cogsci_conventionsSymposium.tex
@@ -60,9 +60,9 @@
   Stanford University \\
 {\large \bf Simon Kirby (simon.kirby@ed.ac.uk)} \\
 {\large \bf Kenny Smith (kenny.smith@ed.ac.uk)} \\
-  University of Edinburgh, \\
+  University of Edinburgh \\
 {\large \bf Robert Goldstone (rgoldsto@indiana.edu)}\\
-  Indiana University, Bloomington\\  
+  Indiana University\\  
 {\large \bf Tom Griffiths (tom\_griffiths@berkeley.edu)}\\
 University of California, Berkeley}
 
@@ -72,11 +72,11 @@ University of California, Berkeley}
 
 \section{Overview}
 
-Much of our everyday behavior is governed by conventions. The shape of the line we form at the caf\'e, the language we use to order our coffee, and the the money we use to pay for it are all partly arbitrary but self-sustaining solutions to recurring coordination problems. This definition, first formalized by David Lewis \citeyear{Lewis69_Convention}, has provided a potent means of characterizing conventions. For cognitive scientists, however, the outstanding question is how these solutions emerge and adapt in populations of learning, reasoning agents. The aim of this symposium is to gather and integrate several distinct empirical and theoretical perspectives on this question, bridging different domains of application.
+Much of our everyday behavior is governed by conventions. The shape of the line we form at the caf\'e, the language we use to order our coffee, and the money we use to pay for it are all partly arbitrary but self-sustaining solutions to recurring coordination problems. This definition, first formalized by David Lewis \citeyear{Lewis69_Convention}, has provided a potent means of characterizing conventions. For cognitive scientists, however, the outstanding question is how these solutions emerge and adapt in populations of learning, reasoning agents. The aim of this symposium is to gather and integrate several distinct empirical and theoretical perspectives on this question, bridging different domains of application.
 
-There are two primary experimental paradigms used to study the emergence of conventions, each particularly useful for answering certain theoretical questions. The first is an iterated learning or diffusion chain design, where each successive participant produces the data used to train the next participant. Iterated learning experiments have been used, for example, to probe the bottlenecks and inductive biases driving the emergence of efficient, compressible structures in language \cite{KirbyCornishSmith08_PNAS, GriffithsKalish07_LanguageEvolution}. The second is a closed group design, drawing from tasks in collective behavior and behavioral game theory, where a single group of two or more participants repeatedly play a coordination game with one another. Because participants directly interact over time, closed group tasks have been useful for capturing the establishment of shared expectations and the behavioral dynamics of self-organization \cite{GoldstoneGureckis09_Collective_Behavior_Review, CentolaBaronchelli15_ConventionEmergence}.
+There are two primary experimental paradigms used to study the emergence of conventions, each particularly useful for answering certain theoretical questions. The first is an iterated learning or diffusion chain design, where each successive participant produces the data used to train the next participant. Iterated learning experiments have been used, for example, to probe the inductive biases driving the emergence of efficient, compressible structures in language \cite{KirbyCornishSmith08_PNAS, GriffithsKalish07_LanguageEvolution}. The second is a closed group design, drawing from tasks in collective behavior and behavioral game theory, where a single group of two or more participants repeatedly play a coordination game with one another. Because participants directly interact over time, closed group tasks have been useful for capturing the establishment of shared social expectations and the behavioral dynamics of self-organization \cite{ClarkWilkesGibbs86_ReferringCollaborative, GoldstoneRobertsGureckis08_EmergentProcesses, Galantucci05_EmergenceOfCommunication}.
 
-Recently, these two paradigms have begun to merge, especially within the domain of language evolution, spurring novel models of the pressures and constraints contributed by each mechanism and how they interact to shape stable conventions. However, many insights from collective behavior and social cognition have not yet been integrated. Moving forward, theoretical questions include sources of variability in convention-formation, the role of active social reasoning vs. emergent inductive biases, and the multiple scales on which conventions are formed; empirical issues include scaling up experiments to encompass larger populations and developing hybrid paradigms to test domain-generality of formation processes. 
+Recently, these two paradigms have begun to merge, especially within the domain of language evolution, spurring novel models of the pressures and constraints contributed by each mechanism and how they interact to shape stable conventions \cite{KirbyTamarizCornishSmith15_CompressionCommunication, CentolaBaronchelli15_ConventionEmergence}. However, many insights from collective behavior and social cognition have not yet been integrated. Moving forward, theoretical questions include sources of variability in convention-formation, the role of active social reasoning vs. emergent inductive biases, and the multiple scales on which conventions are formed; empirical issues include scaling up experiments to encompass larger populations and developing hybrid paradigms to test domain-generality of formation processes. 
 
 This set of issues cuts across the interests of many different areas of cognitive science: from linguists concerned with the origins of language, to developmental psychologists interested in how children co-create their culture, to computer scientists attempting to build self-sustaining robot collectives. 
 Because of this breadth and because recent developments have opened up exciting new sources of data and theory, we are confident this symposium will be of broad interest at Cognitive Science.
@@ -88,13 +88,12 @@ We will close with a panel discussion on some of these issues, led by Noah Goodm
 %The study of social conventions cuts across many disciplines and perspectives within the cognitive science community, yet 
 
 %Many of us are interested specifically in how conventions have arisen in language, from the long-term evolution of linguistic structure down to the choice of referent in real-time communication. Iterated learning paradigms allow us to simulate more general cultural transmission processes in the lab, showing the effects of cognitive biases on convention-formation. And work in the collective behavior literature has demonstrated how groups of agents can coordinate on emergent patterns of behavior in the absence of explicit communication. 
-
 \begin{center}\textbf{Compression and communication in the cultural evolution of linguistic structure}\end{center}
 \begin{center}\emph{Simon Kirby \& Kenny Smith}\end{center}
 
-Language exhibits striking systematic structure. Words are composed of combinations of reusable sounds, and those words in turn are combined to form complex sentences. These properties make language unique among natural communication systems and enable our species to convey an open-ended set of messages. We provide a cultural evolutionary account of the origins of this structure. We show, using simulations of rational learners and laboratory experiments, that structure arises from a trade-off between pressures for compressibility (imposed during learning) and expressivity (imposed during communication). We further demonstrate that the relative strength of these two pressures can be varied in different social contexts, leading to novel predictions about the emergence of structured behaviour in the wild.
+Language exhibits striking systematic structure. Words are composed of combinations of reusable sounds, and those words in turn are combined to form complex sentences. These properties make language unique among natural communication systems and enable our species to convey an open-ended set of messages.  We provide a cultural evolutionary account of the origins of this structure. We show, using simulations of rational learners and laboratory experiments, that structure arises from a trade-off between pressures for compressibility (imposed during learning) and expressivity (imposed during communication). We further demonstrate that the relative strength of these two pressures can be varied in different social contexts, leading to novel predictions about the emergence of structured behaviour in the wild.
 
-\begin{center}\textbf{Adaptive Group Coordination and Role Differentiation}\end{center}
+\begin{center}\textbf{Adaptive group coordination and role differentiation}\end{center}
 \begin{center}\emph{Robert Goldstone \& Michael E. Roberts (Co-author)}\end{center}
 
 Many real world situations (potluck dinners, academic departments, sports teams, corporate divisions, committees, seminar classes, etc.) involve actors adjusting their contributions in order to achieve a mutually satisfactory group goal, a win-win result.  However, the majority of human group research has involved situations where groups perform poorly because task constraints promote either individual maximization behavior or diffusion of responsibility, and even successful tasks generally involve the propagation of one correct solution through a group.  
@@ -106,7 +105,11 @@ Our empirical results provide evidence for adaptive coordination in human groups
 \begin{center}\textbf{The emergence of conventions in real-time environments}\end{center}
 \begin{center}\emph{Robert Hawkins}\end{center}
 
-Why are some behaviors governed by strong social conventions while others are not? We experimentally investigate two factors contributing to the formation of conventions in a game of impure coordination: the continuity of interaction within each round of play (simultaneous vs. dynamic) and the stakes of the interaction (high vs. low differences between payoffs). To maximize efficiency and fairness in this game, players must coordinate on one of two equally advantageous equilibria. In agreement with other studies manipulating continuity of interaction, we find that players who were allowed to interact continuously within rounds achieved outcomes with greater efficiency and fairness than players who were forced to make simultaneous decisions. However, the stability of equilibria in the real-time condition varied systematically and dramatically with stakes: players converged on more stable patterns of behavior when stakes are high. To account for this result, we present a novel analysis of the dynamics of continuous interaction and signaling within rounds. We discuss this previously unconsidered interaction between within-trial and across-trial dynamics as a form of social canalization. When stakes are low in a real-time environment, players can satisfactorily coordinate `on the fly,' but when stakes are high there is increased pressure to establish and adhere to shared expectations that persist across rounds.
+Why are some behaviors governed by strong social conventions while others are not? We experimentally investigate two factors contributing to the formation of conventions in a game of impure coordination: the continuity of interaction within each round of play (simultaneous vs. dynamic) and the stakes of the interaction (high vs. low differences between payoffs). To maximize efficiency and fairness in this game, players must coordinate on one of two equally advantageous equilibria. In agreement with other studies manipulating continuity of interaction, we find that players who were allowed to interact continuously within rounds achieved outcomes with greater efficiency and fairness than players who were forced to make simultaneous decisions. 
+
+However, the stability of equilibria in the real-time condition varied systematically and dramatically with stakes: players converged on more stable patterns of behavior when stakes are high. To account for this result, we present a novel analysis of the dynamics of continuous interaction and signaling within rounds. We discuss this previously unconsidered interaction between within-trial and across-trial dynamics as a form of social canalization. When stakes are low in a real-time environment, players can satisfactorily coordinate `on the fly,' but when stakes are high there is increased pressure to establish and adhere to shared expectations that persist across rounds. 
+\vspace{1cm}
+
 
 \begin{center}\textbf{Effects of inductive biases in iterated learning and coordination}\end{center}
 \begin{center}\emph{Tom Griffiths}\end{center}
